# tg_shop_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py  logging_config.py
bot/database/: base.py  crud.py  engine.py  fixture.py  models.py
bot/filters/: custom.py
bot/handlers/: __init__.py  admin_private.py  menu_processing.py  payments.py  user_group.py  user_private.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: db.py
bot/utils/: bot_commands.py  paginator.py
database/: crud.py  engine.py
handlers/: menu_processing.py  user_private.py
keyboards/: inline.py
tests/: conftest.py  test_crud.py  test_filters.py  test_paginator.py  test_placeholder.py
utils/: db_texts.py  placeholder.py
